[project]
name = "cloud-storage-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage",
    "jwt",
    "boto3",
    "azure-storage-blob",
    "azure-core>=1.38.0",   # Indirect, prevents CVE-2026-21226
    "authlib>=1.6.9",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.6.3",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.22", # Indirect; prevents CVE-2026-24486
    "fastmcp>=3.2.0",           # prevents CVE-2026-32871
]
