[project]
name = "cloud-storage-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage",
    "jwt",
    "boto3",
    "azure-storage-blob",
    "azure-core>=1.41.0",   # Indirect, prevents CVE-2026-21226
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.29", # Indirect; prevents CVE-2026-24486
    "fastmcp>=3.2.4",           # Indirect; prevents CVE-2026-32871 (critical), CVE-2026-27124 (high)
]
