[project]
name = "flight_tool"
version = "0.1.0"
description = "MCP tool for searching flights via fast-flights API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fast_flights>=0.1.0",
    "playwright>=1.60.0",
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "fastmcp>=3.4.2",           # Indirect; prevents CVE-2026-32871 (critical), CVE-2026-27124 (high)
    "protobuf>=7.35.1",         # Indirect; prevents CVE-2026-0994
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
    "pyjwt>=2.13.0",            # Indirect; prevents CVE-2026-32597
]
