[project]
name = "image_tool"
version = "0.1.0"
description = "MCP tool for returning images from picsum.photos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "fastmcp>=3.2.4",           # Indirect; prevents CVE-2026-32871 (critical), CVE-2026-27124 (high)
]
