[project]
name = "get_movie_info"
version = "0.1.0"
description = "Simple movie review tool using OMDb Open Movie Database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.2",           # Indirect; prevents CVE-2026-32871 (critical), CVE-2026-27124 (high)
    "requests>=2.34.2",
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66471, CVE-2026-21441, CVE-2026-44431
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
    "pyjwt>=2.13.0",            # Indirect; prevents CVE-2026-32597
]
