[project]
name = "reservation_tool"
version = "0.1.0"
description = "Restaurant reservation MCP server with provider abstraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.0",
    "pydantic>=2.0.0",
    "authlib>=1.6.9",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.6.3",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.22", # Indirect; prevents CVE-2026-24486
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
]
