[project]
name = "get_channels"
version = "0.1.0"
description = "simple slack tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "slack_sdk>=3.36.0",
    "authlib>=1.6.9",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.6.3",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.22", # Indirect; prevents CVE-2026-24486
    "fastmcp>=3.2.0",           # Indirect; prevents CVE-2026-32871
    "starlette>=0.49.1",        # Indirect; prevents CVE-2025-62727
    "cryptography>=46.0.5",     # Indirect; prevents CVE-2026-26007
]
