[project]
name = "get_channels"
version = "0.1.0"
description = "simple slack tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.0",
    "slack_sdk>=3.41.0",
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.28", # Indirect; prevents CVE-2026-24486
    "fastmcp>=3.3.0",           # Indirect; prevents CVE-2026-32871
    "starlette>=0.49.1",        # Indirect; prevents CVE-2025-62727
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
]
