[project]
name = "get_channels"
version = "0.1.0"
description = "simple slack tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "slack_sdk>=3.43.0",
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.32", # Indirect; prevents CVE-2026-24486
    "fastmcp>=3.4.4",           # Indirect; prevents CVE-2026-32871
    "starlette>=1.3.1",        # Indirect; prevents CVE-2025-62727
    "cryptography>=49.0.0,<50", # Indirect; prevents CVE-2026-26007
]
