[project]
name = "get_weather"
version = "0.1.0"
description = "simple weather tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "authlib>=1.7.2",   # Indirect; prevents CVE-2026-27962
    "urllib3>=2.7.0",   # Indirect; prevents CVE-2025-66418
    "python-multipart>=0.0.29", # Indirect; prevents CVE-2026-24486
    "fastmcp>=3.3.1",           # Indirect; prevents CVE-2026-32871
    "uvicorn>=0.48.0",
    "cryptography>=48.0.0,<49", # Indirect; prevents CVE-2026-26007
    "starlette>=1.2.0",        # Indirect; prevents CVE-2025-62727
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
]
