[project]
name = "wiki-memory-service"
version = "0.2.0"
description = "Multi-agent wiki memory service with git-backed storage and per-topic ACL"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
